feat(AdminController): controller advice